# python-experiments

./: .gitignore
design-patterns/: refactor_code_violating_dip.py  refactor_code_violating_isp.py  refactor_code_violating_lsp.py  refactor_code_violating_ocp.py  refactor_code_violating_srp.py
fastapi-url-shortener-sync/: .env  pyproject.toml  url_shortener.db
fastapi-url-shortener-sync/url_shortener/: config.py  database.py  main.py  models.py  schemas.py
interviewingio-two-sum/: interviewingio-two-sum.py
multiple-inheritence-and-mro/: mro-test.py
quicksort/: quicksort.py
using-mutable-list-as-default-argument/: append_to_list.py
