[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "Dozham",email = "12370239+dozham@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy", # It has an async version
    "python-dotenv",
    "validators",
    "pydantic_settings"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
